feat: complete 1.0 release readiness